--- a/plugins/component/project/wasmcloud.toml.templ
+++ b/plugins/component/project/wasmcloud.toml.templ
@@ -4,6 +4,6 @@ type = "component"
 version = "0.1.0"
 
 [component]
-wit_world = "{{ .ComponentName }}"
+wit_world = "{{ .WitComponentName }}"
 wasm_target = "wasm32-wasi-preview2"
 destination = "build/{{ .ComponentName }}_s.wasm"
