request-reply sufficiently tested.

--- a/plugins/component/component-template/component.go.templ
+++ b/plugins/component/component-template/component.go.templ
@@ -9,7 +9,7 @@ import (
 )
 var (
 	logger *slog.Logger
-	{{ if or .ComponentNatsCore .ComponentNatsKeyValue .ComponentNatsJetstream -}}
+	{{ if or .ComponentNatsCore .ComponentNatsKeyValue .ComponentNatsJetstream .ExportNatsCoreRequestReplyWit -}}
 	conn *nats.Conn
 	{{ end -}}
 	{{ if or .ComponentNatsJetstream .ComponentNatsKeyValue -}}
