--- a/plugins/component/component-template/deps.toml.templ
+++ b/plugins/component/component-template/deps.toml.templ
@@ -2,7 +2,7 @@
 provider-jetstream-nats = "https://github.com/Mattilsynet/map-nats-jetstream/archive/v0.0.1-pre-17.tar.gz"
 {{ end -}}
 component = "https://github.com/wasmCloud/component-sdk-go/archive/v0.0.5.tar.gz"
-{{ if or .ImportNatsCoreWit .ExportNatsCoreWit -}} 
+{{ if or .ImportNatsCoreWit .ExportNatsCoreWit .ExportNatsCoreRequestReplyWit -}} 
 messaging = "https://github.com/wasmCloud/messaging/archive/v0.2.0.tar.gz"
 {{ end -}}
 {{ if .ImportNatsKvWit -}} 
