--- a/plugins/component/component-template/pkgnats.go.templ
+++ b/plugins/component/component-template/pkgnats.go.templ
@@ -1,7 +1,10 @@
 {{ if or .ComponentNatsJetstream .ComponentNatsKeyValue .ComponentNatsCore .ExportNatsCoreRequestReplyWit -}}
 package nats
 import (
-	"errors"
+
+{{ if or .ExportNatsCoreRequestReplyWit .ImportNatsCoreWit -}}
+	 "errors"
+	 {{ end -}}
 	{{ if or .ExportNatsCoreRequestReplyWit .ImportNatsCoreWit -}}
 	"{{ .Repository }}/gen/wasmcloud/messaging/consumer"
 	{{ end -}}
@@ -73,7 +76,7 @@ func ToBrokenMessageFromNatsMessage(nm *Msg) types.BrokerMessage {
 		}
 	}
 }
-
+{{ if or .ImportNatsCoreWit .ExportNatsCoreRequestReplyWit -}}
 func (nc *Conn) Publish(msg *Msg) error {
 	bm := ToBrokenMessageFromNatsMessage(msg)
 	result := consumer.Publish(bm)
@@ -82,6 +85,7 @@ func (nc *Conn) Publish(msg *Msg) error {
 	}
 	return nil
 }
+{{ end -}}
 
 {{ if .ExportNatsCoreRequestReplyWit -}}
 func (conn *Conn) RequestReply(msg *Msg, timeoutInMillis uint32) (*Msg, error) {
