--- a/plugins/component/component-template/pkgnats.go.templ
+++ b/plugins/component/component-template/pkgnats.go.templ
@@ -14,7 +14,9 @@ import (
 	{{ if or .ExportNatsCoreRequestReplyWit .ExportNatsCoreWit .ImportNatsCoreWit -}}
 	"{{ .Repository }}/gen/wasmcloud/messaging/types"
 	{{ end -}}
+	{{ if or .ExportNatsCoreRequestReplyWit .ExportNatsCoreWit .ImportNatsCoreWit -}}
 	"github.com/bytecodealliance/wasm-tools-go/cm"
+        {{ end -}}
 )
 type (
 	Conn struct {
