--- a/plugins/component/component-template/deps.toml.templ
+++ b/plugins/component/component-template/deps.toml.templ
@@ -8,3 +8,6 @@ messaging = "https://github.com/wasmCloud/messaging/archive/v0.2.0.tar.gz"
 {{ if or .ImportNatsKvWit .ExportNatsKvWit -}} 
 keyvalue = "https://github.com/Mattilsynet/map-nats-kv/archive/v0.0.2-pre-15.tar.gz"
 {{ end -}}
+{{ if .ComponentCronJob -}}
+cronjob = "https://github.com/Mattilsynet/map-cronjob-provider-wc/archive/v0.0.4.tar.gz"
+{{ end -}}
