--- a/plugins/component/component-template/pkgcronjob.go.templ
+++ b/plugins/component/component-template/pkgcronjob.go.templ
@@ -2,9 +2,9 @@
 package cronjob
 
 import (
-	"{{.Repository}}/gen/mattilsynet/map-cronjob-provider-wc/cron-handler"
+	"{{.Repository}}/gen/mattilsynet/cronjob/cronjob"
 )
 func RegisterCronHandler(fn func()) {
-   cronHandler.Exports.CronHandler = fn
+   cronjob.Exports.CronHandler = fn
 }
 {{ end -}}
