fix: updated such that we include nats import in component when request reply is selected in tui.

--- a/plugins/component/component-template/component.go.templ
+++ b/plugins/component/component-template/component.go.templ
@@ -5,7 +5,7 @@ import (
 	"log/slog"
 	
 	"go.wasmcloud.dev/component/log/wasilog"	
-	{{ if or .ComponentNatsJetstream .ComponentNatsCore .ComponentNatsKeyValue}}
+	{{ if or .ComponentNatsJetstream .ComponentNatsCore .ComponentNatsKeyValue .ExportNatsCoreRequestReplyWit -}}
 	"{{ .Repository }}/pkg/nats"
 	{{ end -}}
 	{{ if .ComponentCronJob }}
