fix: updated local wadm templ misspelling of ghcr.

--- a/plugins/component/component-template/local.wadm.yaml.templ
+++ b/plugins/component/component-template/local.wadm.yaml.templ
@@ -142,7 +142,7 @@ spec:
     - name: cronjob
       type: capability
       properties:
-        image: ghrc.io/mattilsynet/map-cronjob-provider-wc:v0.0.4
+        image: ghcr.io/mattilsynet/map-cronjob-provider-wc:v0.0.4
         id: cronjob
       traits:
         - type: link
