chore: updated map-cli to handle me-gcp and not pure me anymore.

--- a/plugins/component/component-template/README.md.templ
+++ b/plugins/component/component-template/README.md.templ
@@ -12,7 +12,14 @@ This wasmcloud component is responsible for ...
 2. wit-deps  
 3. wit-bindgen-go (wash-tools)  
 
-A solution is to install `cargo` and `cargo-binstall`, and then `cargo binstall wash-cli, wit-deps`
+A solution is to install `cargo` and `cargo-binstall`
+
+1. cargo install binstall
+2. cargo binstall wash-cli
+3. cargo binstall wasm-tools
+4. cargo binstall wit-deps-cli
+5. go install go.bytecodealliance.org/cmd/wit-bindgen-go@latest
+
 
 ## First build
 1. `wit-deps`  
